[gd_scene load_steps=3 format=2]

[ext_resource path="res://002_assets/003_player/player.png" type="Texture" id=1]
[ext_resource path="res://001_scenes/003_player/Player.gd" type="Script" id=2]

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="MouthArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="MouthArea"]
polygon = PoolVector2Array( 465.459, -157.129, 344.507, -110.512, 282.99, -110.105, 265.351, -132.153, 274.17, -154.202, 288.029, -188.22, 281.1, -209.639, 252.122, -243.027, 208.024, -266.965, 139.359, -284.604, 95.9479, -278.658, 5.17883, -247.289, -44.2103, -247.289, -87.5926, -283.33, -159.007, -318.703, -217.072, -329.382, -251.11, -310.694, -271.304, -278.67, -293.982, -243.392, -310.361, -231.423, -392.776, -193.747, -480.457, -148.492, -562.482, -81.3173, -597.837, -14.1421, -599.276, 30.8588, -513.968, 95.8005, -444.261, 132.404, -352.97, 160.515, -313.988, 181.035, -303.67, 245.325, -281.366, 292.672, -246.31, 321.542, -209.227, 323.789, -171.77, 309.555, -148.92, 285.208, -135.81, 247.001, -139.031, 216.124, -197.831, 184.34, -31.5038, 164.246, 1.5, 172, 83.9713, 220.104, 154, 239.5, 224, 238.5, 263.872, 215.808, 290.96, 177.38, 290.33, 147.142, 241.193, 97.3752, 254.422, 78.4763, 345.137, 70.9168, 425.772, 101.155, 505.318, 113.375, 542.314, 106.195, 567.513, 82.8861, 592.081, 25.5597, 594.601, -69.5644, 570.663, -141.38, 526.565, -158.389 )

[node name="WallCollision" type="CollisionPolygon2D" parent="."]
scale = Vector2( 0.99, 0.94 )
polygon = PoolVector2Array( 468.527, -150.347, 350.676, -102.956, 283.536, -99.1946, 249.966, -115.744, 249.966, -151.099, 270.68, -186.455, 281.1, -209.639, 252.122, -243.027, 208.024, -266.965, 139.359, -284.604, 95.9479, -278.658, 5.17883, -247.289, -44.2103, -247.289, -87.5926, -283.33, -159.007, -318.703, -217.072, -329.382, -251.11, -310.694, -271.304, -278.67, -293.982, -243.392, -310.361, -231.423, -392.776, -193.747, -480.457, -148.492, -555.246, -69.6837, -586.983, -13.1737, -588.411, 30.4563, -511.272, 91.3879, -441.99, 127.495, -352.97, 160.515, -313.988, 181.035, -296.234, 247.001, -281.366, 292.672, -246.31, 321.542, -209.227, 323.789, -171.77, 309.555, -153.93, 284.616, -150.559, 254.085, -161.537, 228.671, -212.988, 200.605, -199.099, 178.113, -31.5038, 164.246, 1.5, 172, 83.9713, 220.104, 154, 239.5, 224, 238.5, 263.872, 215.808, 290.96, 177.38, 274.837, 155.393, 225.623, 102.141, 266.073, 69.48, 350.343, 62.3798, 428.805, 96.4777, 504.77, 105.433, 542.314, 106.195, 567.513, 82.8861, 583.649, 22.4854, 590.856, -64.8075, 570.663, -141.38, 525.667, -148.843 )
[connection signal="area_entered" from="MouthArea" to="." method="_on_MouthArea_area_entered"]
[connection signal="body_entered" from="MouthArea" to="." method="_on_MouthArea_body_entered"]
